<resources>
    <string name="app_name">GymLog</string>
    <string name="hint_exercise_name">Exercise Name (e.g, Squat)</string>
    <string name="hint_sets">Sets</string>
    <string name="hint_reps">Reps</string>
    <string name="button_log_exercise">Log Exercise</string>
    <string name="hint_weight_kg">Weight (kg)</string>
    <string name="delete_all_workouts">Delete All Workouts</string>
    <string name="title_workout_details">Workout Details</string>
    <string name="button_update_workout">Update Workout</string>
    <string name="desc_add_workout">Add new Workout</string>
    <string name="click_to_select_date">Click to select date</string>
    <string name="profile">Profile</string>
    <string name="progress">Progress</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_new_workout_session">Add New Workout session</string>
    <string name="new_session">New Session</string>
    <string name="consistency_is_key_tap_the_button_below_to_log_your_first_session">Consistency is key! Tap the button below to log your first session.</string>
    <string name="no_workouts_recorded">No Workouts Recorded</string>
    <string name="no_recent_workouts">No recent workouts</string>
    <string name="routines">Routines</string>
    <string name="add_routine">Add Routine</string>
    <string name="routine_name">Routine Name</string>
    <string name="routine_goal">Goal (e.g. Strength)</string>
    <string name="save_routine">Save Routine</string>
    <string name="update_routine">Update Routine</string>
    <string name="start_session">Start Session</string>
    <string name="health_insight">Health Insight</string>
    <string name="bmi_score">BMI Score</string>
    <string name="fitness_strategy">Fitness Strategy</string>
    <string name="save_profile">Save &amp; Update Health Profile</string>
    <string name="cloud_sync">Cloud Sync</string>
    <string name="backup_desc">Backup your data to the cloud</string>
    <string name="sync_now">Sync Now</string>
    <string name="session_title_format">Session: %1$s</string>
    <string name="rest_over">Rest Over!</string>
    <string name="active_workout">Active Workout</string>
    <string name="resume_session_desc">Tap to resume your session</string>
    <string name="resume_session">Resume Session</string>
    <string name="start_workout">Start Workout</string>
</resources>